sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: ')' expected but ';' found.
        copie(i-j;i)
                 ^AlgInsertionSort:10: error: ';' expected but ')' found.
        copie(i-j;i)
                   ^AlgInsertionSort:18: error: Unmatched closing brace '}' ignored here
}
^